[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Exercicio1" type="Button" parent="."]
margin_left = 162.0
margin_top = 478.0
margin_right = 295.0
margin_bottom = 543.0
text = "Exercício 1"

[node name="Execicio2" type="Button" parent="."]
margin_left = 345.0
margin_top = 479.0
margin_right = 478.0
margin_bottom = 544.0
text = "Exercício 2"

[node name="Exercicio3" type="Button" parent="."]
margin_left = 527.0
margin_top = 480.0
margin_right = 660.0
margin_bottom = 545.0
text = "Exercício 3"

[node name="Exercicio4" type="Button" parent="."]
margin_left = 706.0
margin_top = 482.0
margin_right = 839.0
margin_bottom = 547.0
text = "Exercício 4"

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 291.0
margin_top = 16.0
margin_right = 703.0
margin_bottom = 224.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="ColorRect"]
margin_right = 411.0
margin_bottom = 207.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1

[node name="input1" type="LineEdit" parent="."]
margin_left = 345.0
margin_top = 273.0
margin_right = 471.0
margin_bottom = 325.0

[node name="input2" type="LineEdit" parent="."]
margin_left = 347.0
margin_top = 344.0
margin_right = 471.0
margin_bottom = 392.0

[node name="input3" type="LineEdit" parent="."]
margin_left = 348.0
margin_top = 410.0
margin_right = 472.0
margin_bottom = 458.0

[node name="input4" type="LineEdit" parent="."]
margin_left = 708.0
margin_top = 404.0
margin_right = 834.0
margin_bottom = 456.0

[connection signal="pressed" from="Exercicio1" to="." method="_on_Exercicio1_pressed"]
[connection signal="pressed" from="Execicio2" to="." method="_on_Execicio2_pressed"]
[connection signal="pressed" from="Exercicio3" to="." method="_on_Exercicio3_pressed"]
[connection signal="pressed" from="Exercicio4" to="." method="_on_Exercicio4_pressed"]
